[package]
name = "ask"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.5.0"
clap = { version = "4.5.39", features = ["derive"] }
indicatif = "0.17.11"
inquire = "0.7.5"
owo-colors = "4.2.1"
reqwest = { version = "0.12.19", features = ["json"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
